# musical-octo-happiness

./: README.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/musical_octo_happiness/: crew.py  main.py
src/musical_octo_happiness/config/: agents.yaml  tasks.yaml
